<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">وكر الاوغاد</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_web_client_id">405841005088-jqsnbus52s1ua4j57pj9j34904094e7f.apps.googleusercontent.com</string>
    <string name="facebook_app_id">175928125942114</string>
    <string name="fb_login_protocol_scheme">fb175928125942114</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://wild-city-9abb9.firebaseio.com</string>
    <string name="gcm_defaultSenderId">405841005088</string>
    <string name="google_api_key">AIzaSyCAyP7RkqKYRFGkowGtDLxDZh-XibYQXV0</string>
    <string name="google_app_id">1:405841005088:android:9683edab61df46fb</string>
    <string name="google_crash_reporting_api_key">AIzaSyCAyP7RkqKYRFGkowGtDLxDZh-XibYQXV0</string>
    <string name="google_storage_bucket">wild-city-9abb9.appspot.com</string>
    <string name="hs__attach_btn">OK, attach</string>
    <string name="hs__attach_screenshot_btn">Attach Screenshot</string>
    <string name="hs__ca_msg">"We're happy to help you!"</string>
    <string name="hs__change_btn">Change</string>
    <string name="hs__chat_hint">Type your message</string>
    <string name="hs__confirmation_footer_msg">Thanks for messaging us!</string>
    <string name="hs__confirmation_msg">Did we answer all your questions?</string>
    <string name="hs__contact_us_btn">CONTACT US</string>
    <string name="hs__conversation_detail_error">Please describe your problem</string>
    <string name="hs__conversation_end_msg">This conversation has ended.</string>
    <string name="hs__conversation_header">Conversation</string>
    <string name="hs__conversation_started_message">Your message has been received. Thanks for contacting us!</string>
    <string name="hs__could_not_open_attachment_msg">No apps can perform this action.</string>
    <string name="hs__could_not_reach_support_msg">Unable to reach support</string>
    <string name="hs__cr_msg">What else can we help you with?</string>
    <string name="hs__csat_additonal_feedback_message">Any other feedback (optional)</string>
    <string name="hs__csat_dislike_message">Hated It!</string>
    <string name="hs__csat_like_message">Loved It!</string>
    <string name="hs__csat_message">"What's your feedback about our customer support?"</string>
    <string name="hs__csat_option_message">or</string>
    <string name="hs__csat_ratingbar">Please rate our service.</string>
    <string name="hs__csat_submit_toast">Thanks for rating us.</string>
    <string name="hs__data_not_found_msg">Data not found</string>
    <string name="hs__default_notification_content_title">Support</string>
    <string name="hs__description_invalid_length_error">Please describe further so that we can help better</string>
    <string name="hs__dm_video_loading">Loading Video…</string>
    <string name="hs__done_btn">Done</string>
    <string name="hs__email_hint">Email (optional)</string>
    <string name="hs__email_required_hint">Email</string>
    <string name="hs__empty_section">Sorry! No questions available in this section.</string>
    <string name="hs__faq_header">FAQ</string>
    <string name="hs__faq_helpful_msg">Helpful</string>
    <string name="hs__faq_unhelpful_msg">Not Helpful</string>
    <string name="hs__faqs_search_footer">No FAQs found.</string>
    <string name="hs__faqs_updating">Updating FAQs…</string>
    <string name="hs__faqs_updation_failure">Failed to update FAQs</string>
    <string name="hs__faqs_uptodate">FAQs up-to-date</string>
    <string name="hs__feedback_button">Send Feedback</string>
    <string name="hs__file_not_found_msg">File not found</string>
    <string name="hs__file_type_audio">Audio</string>
    <string name="hs__file_type_csv">CSV</string>
    <string name="hs__file_type_ms_office">Office doc</string>
    <string name="hs__file_type_pdf">PDF</string>
    <string name="hs__file_type_rtf">RTF</string>
    <string name="hs__file_type_text">TXT</string>
    <string name="hs__file_type_unknown">File</string>
    <string name="hs__file_type_video">Video</string>
    <string name="hs__help_header">Help</string>
    <string name="hs__invalid_description_error">Invalid description</string>
    <string name="hs__invalid_email_error">Please enter a valid email</string>
    <string name="hs__mark_helpful_toast">Question has been marked as Helpful</string>
    <string name="hs__mark_no">NO</string>
    <string name="hs__mark_unhelpful_toast">Question has been marked as Not Helpful</string>
    <string name="hs__mark_yes">YES</string>
    <string name="hs__mark_yes_no_question">Was this helpful?</string>
    <string name="hs__network_error_msg">Oops! Something went wrong</string>
    <string name="hs__network_unavailable_msg">Network not available.</string>
    <string name="hs__new_conversation_btn">START A NEW CONVERSATION</string>
    <string name="hs__new_conversation_header">New Conversation</string>
    <string name="hs__new_conversation_hint">"What's on your mind?"</string>
    <string name="hs__notification_content_text">RE:</string>
    <string name="hs__question_header">Question</string>
    <string name="hs__question_helpful_message">You found this helpful.</string>
    <string name="hs__question_unhelpful_message">"You didn't find this helpful."</string>
    <string name="hs__rate_button">Rate</string>
    <string name="hs__remove_screenshot_btn">Remove Screenshot</string>
    <string name="hs__review_accepted_message">Accepted review request</string>
    <string name="hs__review_btn">OK, review</string>
    <string name="hs__review_close_button">Close</string>
    <string name="hs__review_dialog_msg">"Would you mind taking a moment to review our app? It won't take more than a minute. Thanks for your support!"</string>
    <string name="hs__review_dialog_negative_btn">Never ask me again</string>
    <string name="hs__review_dialog_neutral_btn">Remind me later</string>
    <string name="hs__review_dialog_positive_btn">Rate and Review</string>
    <string name="hs__review_message">If you love our app, please take a moment to rate it</string>
    <string name="hs__review_request_message">Would you like to review the app?</string>
    <string name="hs__review_title">Rate Our App</string>
    <string name="hs__rsc_progress_msg">Sending screenshot.</string>
    <string name="hs__screen_type">phone</string>
    <string name="hs__screenshot_add">Add</string>
    <string name="hs__screenshot_cloud_attach_error">Error attaching screenshot. Please choose an image available locally on the device.</string>
    <string name="hs__screenshot_limit_error">Screenshot size should not exceed %.2f MB</string>
    <string name="hs__screenshot_remove">Remove</string>
    <string name="hs__screenshot_sent_msg">Screenshot sent</string>
    <string name="hs__screenshot_upload_error_msg">Error uploading screenshot</string>
    <string name="hs__search_footer">"Can't find what you were looking for?"</string>
    <string name="hs__search_hint">Describe your problem</string>
    <string name="hs__search_result_message">Questions that may already have your answer</string>
    <string name="hs__search_result_title">Suggestions</string>
    <string name="hs__search_title">Search</string>
    <string name="hs__send_anyway">SEND ANYWAY</string>
    <string name="hs__send_msg_btn">Send</string>
    <string name="hs__sending_fail_msg">Not delivered. Tap to retry.</string>
    <string name="hs__sending_msg">Sending…</string>
    <string name="hs__solved_btn">Yes, solved!</string>
    <string name="hs__unsolved_btn">No, unsolved</string>
    <string name="hs__username_hint">Name</string>
</resources>